--- a/basic 2d platform/Assembly-CSharp.csproj
+++ b/basic 2d platform/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\PlatformerFall.cs" />
     <Compile Include="Assets\Scripts\SimplePlatformerController.cs" />
     <Compile Include="Assets\Scripts\SpawnMonitor.cs" />
     <Reference Include="Unity.PackageManagerUI.Editor">
